[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/player_satan.gd" type="Script" id=1]
[ext_resource path="res://assets/boss.png" type="Texture" id=2]
[ext_resource path="res://assets/player.png" type="Texture" id=3]
[ext_resource path="res://assets/boss_particles.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource/name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate_head/head:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=2]

resource/name = "arrive"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fx:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fx:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83, 84, 85 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 32, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate_head:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]

resource/name = "leave"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fx:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fx:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 85, 84, 83, 82, 81, 80, 79, 78 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 32 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate_head/head:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="player_satan" type="Sprite"]

offset = Vector2( 0, -11 )
vframes = 5
hframes = 8
script/script = ExtResource( 1 )

[node name="rotate_head" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="head" type="Sprite" parent="rotate_head"]

texture = ExtResource( 2 )
offset = Vector2( 5, -26 )
vframes = 5
hframes = 10
__meta__ = {
"_edit_lock_": true
}

[node name="fx" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 3 )
offset = Vector2( 0, -12 )
vframes = 12
hframes = 8
frame = 85
__meta__ = {
"_edit_lock_": true
}

[node name="anim_body" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="anim_fx" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/arrive = SubResource( 2 )
anims/leave = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Particles2D" type="Particles2D" parent="."]

visibility/behind_parent = true
transform/pos = Vector2( -1, -30 )
config/amount = 32
config/lifetime = 2.0
config/process_mode = 1
config/half_extents = Vector2( 4, 0 )
config/texture = ExtResource( 4 )
config/h_frames = 6
params/direction = 180.0
params/spread = 0.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 180.0
params/gravity_strength = 20.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/anim_initial_pos = 1.0
color/color = Color( 0, 0, 0, 1 )

[connection signal="finished" from="anim_body" to="." method="_on_anim_body_finished"]

[connection signal="finished" from="anim_fx" to="." method="_on_anim_fx_finished"]


